<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:background="@drawable/bg_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:clipToPadding="false"
        android:paddingStart="@dimen/activity_padding"
        android:paddingEnd="@dimen/activity_padding"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="22dp"
            android:id="@+id/tv_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/greeting" />
        <TextView
            android:id="@+id/tv_school"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="27dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/white"
            android:text="@string/school" />

        <androidx.cardview.widget.CardView
            app:cardElevation="@dimen/home_card_elevation"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_height="@dimen/home_card_height" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:srcCompat="@drawable/ic_permission"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/permission"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/img_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:elevation="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/btn_permission"
                    android:layout_width="100dp"
                    android:layout_height="36.5dp"
                    android:background="@drawable/btn_create"
                    android:textAllCaps="false"
                    android:layout_marginTop="8dp"
                    android:text="Buat Surat"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="14dp"
            app:cardElevation="@dimen/home_card_elevation"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_height="@dimen/home_card_height" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_sick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:srcCompat="@drawable/ic_sick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/sick"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/img_sick"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:elevation="0dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:id="@+id/btn_sick"
                    android:layout_width="100dp"
                    android:layout_height="36.5dp"
                    android:background="@drawable/btn_create"
                    style="?android:attr/borderlessButtonStyle"
                    android:textAllCaps="false"
                    android:layout_marginTop="8dp"
                    android:text="Buat Surat"
                    app:layout_constraintStart_toStartOf="@+id/tv_sick"
                    app:layout_constraintTop_toBottomOf="@+id/tv_sick" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="14dp"
            app:cardElevation="@dimen/home_card_elevation"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_height="@dimen/home_card_height" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_dispen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    app:srcCompat="@drawable/ic_dispen_circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_dispen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/dispen"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/img_dispen"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/btn_dispen"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="0dp"
                    android:layout_width="100dp"
                    android:layout_height="36.5dp"
                    android:background="@drawable/btn_create"
                    android:textAllCaps="false"
                    android:layout_marginTop="8dp"
                    android:text="Buat Surat"
                    app:layout_constraintStart_toStartOf="@+id/tv_dispen"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dispen" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>